--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
       ref: dev
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  http: ^0.13.3
+  rxdart: ^0.27.1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/settings.svg
+    - assets/clutter_logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
@@ -60,8 +64,10 @@ flutter:
     - family: Raleway
       fonts:
         - asset: assets/fonts/Raleway-Regular.ttf
+          weight: 400
         - asset: assets/fonts/Raleway-Italic.ttf
           style: italic
+          weight: 400
         - asset: assets/fonts/Raleway-Bold.ttf
           weight: 700
         - asset: assets/fonts/Raleway-Light.ttf
